# Arc-Badlands-CommPlex

./: .env.example  CLAUDE.md  COMMPLEX_INSTALL.sh  COMMPLEX_RUNBOOK.md  COMMPLEX_STATUS.md  CONTRIBUTING.md  GLOSSARY.md  LINEAR_IMPORT.csv  Makefile  Procfile  README.md  TEAM_COMMS.md  TEAM_SETUP.md  gcp_secrets_sync.sh  invite_team.sh  patch.py  patch_data.py  pyproject.toml  requirements.txt  sentry.py
.claude/: settings.local.json
.devcontainer/: devcontainer.json  setup.sh
.github/workflows/: python-tests.yml  qa_dispatch.yml
CommPlexAPI/: docker-compose.yml  models.py  requirements.txt
CommPlexAPI/modules/: voice_routes.py
CommPlexAPI/scripts/: test_gateway.py
CommPlexAPI/server/: batch_dealers.csv  batch_dispatch.py  main.py  persona_prompt.txt
CommPlexAPI/server/routes/: gcp_voice_sms.py  sms_intake.py  voice_stream.py
CommPlexCore/campaigns/: f350.py  jayco.py  registry.py  towncar.py
CommPlexCore/gcp/: secrets.py  vertex.py
CommPlexCore/modules/: voice_gcp.py
CommPlexEdge/: index.html
CommPlexEdge/modules/: notifier.py
CommPlexEdge/pwa/: manifest.json  sw.js
CommPlexSpec/campaigns/: base.py
CommPlexSpec/docs/: MASTER_WOVEN_BIBLE.md
ops/: qa_dispatch.py  requirements.txt
ops/cheatsheets/: commplex_v2.py
ops/hooks/: commplex.py  dipper.py
tests/: test_commplex.py  test_sentry.py
